# acts

Core/include/Acts/Seeding/: BinnedSPGroup.ipp  InternalSpacePoint.hpp  Seedfinder.ipp  SpacePointGrid.hpp
Examples/Algorithms/: CMakeLists.txt
Examples/Algorithms/Seeding/include/ActsExamples/Seeding/: LayerLinker.h
Examples/Algorithms/Seeding/src/: SeedingAlgorithm.cpp
Examples/Io/Performance/: CMakeLists.txt
Examples/Io/Performance/ActsExamples/Io/Performance/: SeedingPerformanceWriter.cpp  SeedingPerformanceWriter.hpp
Examples/Run/: CMakeLists.txt
Examples/Run/Common/src/: SeedingExampleBase.cpp
Examples/Run/MyAlgorithmTest/: CMakeLists.txt  MyAlgorithm.cpp  MyAlgorithm.hpp  MyAlgorithmTest.cpp
